--- a/other-libs/gmaps/css/main.css
+++ b/other-libs/gmaps/css/main.css
@@ -29,3 +29,7 @@ body {
   width: 100%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+
+#mapParent, #map {
+  height: 100%;
+}
